# fastgeojson

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  configure  cran-comments.md
.github/workflows/: R-CMD-check.yaml
R/: extendr-wrappers.R  fastgeojson.R
inst/: AUTHORS  json_geojson_benchmarks.R  test-jsonlite-parity.R
man/: disable_fast_json.Rd  enable_fast_json.Rd  fastgeojson.Rd
src/: Makevars  Makevars.darwin  Makevars.in  Makevars.linux  Makevars.win  Makevars.win.in  entrypoint.c  fastgeojson-win.def
src/rust/: Cargo.toml  rust-toolchain.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-serialization.R  test-shim.R
