[package]
name = "fastgeojson"
version = "0.1.0"  # Updated to match R package
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.7"
libR-sys = "0.7"
itoa = "1"
ryu = "1"
rayon = "=1.10.0"
rayon-core = "=1.12.1"

[profile.release]
opt-level = 3       
lto = "fat"         
codegen-units = 1   
panic = "unwind"    
strip = true       