[package]
name = "fastgeojson"
version = "0.2.0" 
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.8"
extendr-ffi = "0.8"
itoa = "1"
ryu = "1"
rayon = "=1.10.0"
rayon-core = "=1.12.1"

[profile.release]
opt-level = 3       
lto = "fat"         
codegen-units = 1   
panic = "unwind"    
strip = true       